update: add curve properties to curve dto objects